fixed bug with rate answer view; switched from var to margin form item spacings

--- a/styles/vars.css
+++ b/styles/vars.css
@@ -28,15 +28,17 @@
   --qf-header-mb: 8px;
 
   /* button */
-  --qf-button-bg: var(--ql-color-accent1-t-lighten4);
-  --qf-button-hover: var(--ql-color-accent1-t-lighten3);
-  --qf-active-button-bg: var(--ql-color-accent1-t-lighten2);
+  --qf-button-bg: var(--ql-color-dark-t-lighten5);
+  --qf-button-bg-hover: var(--ql-color-accent1-t-lighten4);
+  --qf-button-bg-active: var(--ql-color-accent1);
 
-  --qf-active-keybox-bg: var(--ql-color-accent1);
+  --qf-button-color: var(--ql-color-dark);
+  --qf-button-color-active: var(--ql-color-white);
+
   --qf-keybox-bg: var(--ql-color-white);
-
-  --qf-button-color: var(--ql-color-accent1);
-  --qf-active-button-color: var(--ql-color-white); 
+  --qf-keybox-bg-active: var(--ql-color-accent1);
+  --qf-keybox-color: var(--ql-color-dark);
+  --qf-keybox-color-active: var(--ql-color-white);
 
   --qf-submit-button-font-size: var(--ql-font-size-h4);
   
@@ -48,10 +50,9 @@
 
   /* overwritten menu */
   --ql-menu-item-active-bg: var(--ql-color-accent1-t-lighten3);
-  --ql-form-item-vertical-spacing: 0px;
 
   /* overwritten form */
-  --ql-form-item-vertical-spacing: 24px;
+  --ql-form-item-vertical-spacing: 0px;
 
   /* uploader */
   --qf-uploader-color: var(--ql-color-white);
